[gd_scene load_steps=3 format=2]

[ext_resource path="res://networksetup.gd" type="Script" id=1]
[ext_resource path="res://Level 1.tscn" type="PackedScene" id=2]

[node name="networksetup" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Multiplayer_configure" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="join" type="Button" parent="Multiplayer_configure"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -121.0
margin_top = -90.0
margin_right = 108.0
margin_bottom = -45.0
text = "Join"

[node name="create" type="Button" parent="Multiplayer_configure"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -110.0
margin_top = 120.0
margin_right = 109.0
margin_bottom = 153.0
text = "Create"

[node name="Server_ip_adress" type="LineEdit" parent="Multiplayer_configure"]
anchor_left = 0.5
anchor_top = 0.074
anchor_right = 0.5
anchor_bottom = 0.074
margin_left = -169.0
margin_top = -24.4
margin_right = 169.0
margin_bottom = 24.6
text = "SERVER IP"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -65.0

[node name="Node2D" parent="." instance=ExtResource( 2 )]

[connection signal="pressed" from="Multiplayer_configure/join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="Multiplayer_configure/create" to="." method="_on_create_pressed"]
